# JTF-WaveNet

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: default_generator.json
exp_data_predic/: README.md
exp_data_predic/example_run/: config.json  organize_fids.py  plot_viewer.py  predict_all.py  run_preprocess.sh
exp_data_predic/example_run/nmrpipe/: fid.com  process.com
scripts/: eval.py
scripts/generator_check/: check_generator.py
scripts/model_shapes_checks/: model_checks.py  model_with_generator_check.py
scripts/signal_func_checks/: vis_signal.py  vis_vibration_checks.py
scripts/training_params_check/: loss.py  lr_check.py
src/jtf_wavenet/: config.py
src/jtf_wavenet/cli/: eval_runner.py  train.py
src/jtf_wavenet/data/: generator_config.py  generator_core.py  parameter_sampling.py
src/jtf_wavenet/losses/: base.py  baseline.py  losses.py  sbece.py  xi_momenta.py  xi_momenta_smooth.py
src/jtf_wavenet/model/: __init__.py  builders.py  jtf_wavenet.py  model_builder.py  model_config.py
src/jtf_wavenet/signal/: signal_function.py
src/jtf_wavenet/training/: callbacks.py  freeze_utils.py  losses_wrappers.py  stage_wrapper.py  train.py
src/jtf_wavenet/utils/: tf_funcs.py
src/jtf_wavenet/vis/: generator_checks.py  model_checks.py  model_checks_with_generator.py  signal_checks.py  signal_debug_plots.py  style.py
src/jtf_wavenet/vis/loss_checks/: check_sbece.py  check_xi_momenta.py  run_all.py
train/RP_1/: config.json  train.py
