[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "JFT-WaveNet"
version = "0.1.0"
description = "WaveNet-style ML tools for NMR vibration artifact removal + uncertainty estimation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rajka Pejanovic"}, {"Lucas Siemons"}]
keywords = ["NMR", "machine-learning", "deep-learning", "tensorflow", "signal-processing"]
dependencies = [
  "numpy==1.26.4",
  "tensorflow==2.15.0",
  "keras==2.15.0",
  "tf-keras==2.15.0",
  "tensorflow-probability==0.23.0",

  "scipy==1.14.*",
  "pandas==2.2.*",
  "matplotlib==3.9.*",
  "SciencePlots==2.1.*",
  "tqdm>=4.66",

  "nmrglue>=0.10",
  "lmfit>=1.3",
  "uncertainties>=3.2",

  "tensorboard==2.15.*",

  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "openpyxl>=3.1",
  "h5py>=3.11",
  "pillow>=10.4",
]


[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "mypy", "pre-commit"]
viz = ["seaborn>=0.13", "plotly>=6.0", "SciencePlots>=2.1", "altair>=6.0"]
ml = ["scikit-learn>=1.5", "joblib>=1.4"]
tracking = ["mlflow>=2.0", "clearml>=2.0"]
apps = ["streamlit>=1.53", "fastapi>=0.128", "uvicorn>=0.40", "Flask>=3.1", "flask-cors>=6.0", "gunicorn>=23.0"]
geo = ["geopandas>=1.1", "shapely>=2.1", "pyproj>=3.7", "pyogrio>=0.11"]
mac = ["tensorflow-macos==2.15.0"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[project.scripts]
jtfwavenet-eval  = "jtf_wavenet.cli.eval_runner:cli"
jtfwavenet-train = "jtf_wavenet.cli.train:cli"
